--- a/index.html
+++ b/index.html
@@ -5,20 +5,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whatever</title>
+    <title>Boxes</title>
+
+    <style>
+        #centerBox {
+            border-width: 5px;
+            border-style: solid;
+            border-color: #333333;
+            background-color: sandybrown;
+            margin: auto;
+            width: 25%;
+            padding: 10px;
+            overflow: auto;
+            border-radius: 0px 6px 0px 6px;
+        }
+
+        h1 {
+            text-align: center;
+            font-family: Comic Sans MS;
+        }
+
+        .blogBox {
+            margin: 5px;
+            padding: 5px;
+            border: 1px solid black;
+            background-color: aqua;
+            box-shadow: 2px 2px;
+            font-family: Comic Sans MS;
+            overflow: auto;
+        }
+
+
+        .blogBox p {
+            text-align: middle;
+        }
+
+        .blogBox img {
+            float: left;
+            max-width: 200px;
+        }
+
+        /* Use a media query to add a breakpoint at 800px: */
+        @media screen and (max-width: 450px) {
+            .blogBox img {
+                float: none;
+                max-width: none;
+                width: 100%;
+            }
+        }
+            /* Use a media query to add a breakpoint at 800px: */
+            @media screen and (max-width: 450px) {
+                #centerBox {
+                    border-width: 0px;
+                    border-style: solid;
+                    border-color: #333333;
+                    float: none;
+                    max-width: none;
+                    width: 100%;
+                }
+            }
+    </style>
 </head>
 
 <body>
-    <p>Hello how are you today?</p>
-    <p>I was only attacked by <b>two</b> ninja clans this morning</p>
-    <p> <a href="http://192.168.10.69:420/tutd?thumb=up">Thumbs Up</a> </p>
-    <p> <a href="http://192.168.10.69:420/tutd?thumb=wiggle">Thumbs Wiggle</a> </p>
-    <p> <a href="http://192.168.10.69:420/tutd?thumb=down">Thumbs Down</a> </p>
-    <p> <a href="http://192.168.10.69:420/tutd?thumb=oops">Thumbs Remove</a> </p>
-    <ul>
-        <li> <a href="about.html">About Page</a> </li>
-        <li> <a href="gamefiles/game.html">My Game</a> </li>
-    </ul>
-</body>
-
-</html>
+    <div id="centerBox">
+        <h1>#1 Victory Royale</h1>
+        <div class="blogBox">
+            <h2>Blog Post Title</h2>
+            <img src="box.jpg">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rutrum dapibus massa. Nunc sodales
+                scelerisque dolor sit amet volutpat. Aliquam convallis faucibus eros. In eget ultricies nibh. Morbi
+                metus mi, congue efficitur arcu id, aliquet porta orci. Morbi ante nulla, accumsan sit amet turpis ut,
+                mattis pulvinar sapien. Suspendisse tincidunt ipsum non fringilla commodo. Nulla blandit fringilla
+                feugiat. Vivamus at justo eget arcu venenatis vehicula. Sed massa justo, vulputate ut mauris sit amet,
+                commodo viverra massa. Donec dignissim ligula justo, vitae laoreet mauris porta blandit.</p>
+        </div>
+        <div class="blogBox">
+            <h2>Blog Post Title</h2>
+            <img src="box.jpg">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rutrum dapibus massa. Nunc sodales
+                scelerisque dolor sit amet volutpat. Aliquam convallis faucibus eros. In eget ultricies nibh. Morbi
+                metus mi, congue efficitur arcu id, aliquet porta orci. Morbi ante nulla, accumsan sit amet turpis ut,
+                mattis pulvinar sapien. Suspendisse tincidunt ipsum non fringilla commodo. Nulla blandit fringilla
+                feugiat. Vivamus at justo eget arcu venenatis vehicula. Sed massa justo, vulputate ut mauris sit amet,
+                commodo viverra massa. Donec dignissim ligula justo, vitae laoreet mauris porta blandit.</p>
+        </div>
+    </div>
+</body>      
