May 30th Update

--- a/FinalProject2.html
+++ b/FinalProject2.html
@@ -71,7 +71,7 @@
             <a href="gamefiles/game.html">My Game</a>
         </li>
 
-        <li id="page2"><a href="FinalProject.html">Previous Page</a></li>
+        <li id="page2"><a href="index.html">Previous Page</a></li>
 
         <li id="page1"><a href="FinalProject3.html">Next Page</a></li>
     </div>
